--- a/frontend/Admin Dashboard/package.json
+++ b/frontend/Admin Dashboard/package.json
@@ -56,6 +56,7 @@
     "node-sass": "^4.12.0",
     "nouislider": "13.1.1",
     "npm": "^6.14.9",
+    "qrcode.react": "^3.1.0",
     "react": "16.8.4",
     "react-apollo": "^2.5.4",
     "react-bootstrap-typeahead": "^3.4.5",
